[package]
name = "companion_console"
version = "0.1.1"
authors = ["Ryan Andersen <ryco117@gmail.com>"]
description = "A library for allocating and managing the visibility of a console window for a Windows application."
license = "MIT"
edition = "2021"

[dependencies.windows]
version = "0.52.0"
features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
]
